--- a/locationTemplate.html
+++ b/locationTemplate.html
@@ -15,7 +15,8 @@
       $CHARACTER_LIST
       <a class="button-link" href="$LOCATION_ID/newcharacter">New Character</a></div>
       <div class='info-box'><h2>EVENTS</h2> <br>
-        $EVENT_LIST</div>
+        $EVENT_LIST
+        <a class="button-link" href="$LOCATION_ID/newevent">New Event</a></div>
     <div class='info-box'><h2>SUBLOCATIONS</h2> <br>
       $SUBLOCATION_LIST 
       <a class="button-link" href="$LOCATION_ID/new">New Sublocation</a></div>
