Technically feature-complete

--- a/characterTemplate.html
+++ b/characterTemplate.html
@@ -11,7 +11,12 @@
     <div class="info-body">
       <div class='info-box'><h2>STATISTICS</h2>$CHARACTER_STATS</div><div class='info-box'></h2><h2>ABOUT</h2>$CHARACTER_BIO
     </div>
-      <div class='info-box'><h2>EVENTS</h2> <br>
+    <div class='info-box'><h2>JOBS</h2> <br>
+        $JOB_LIST
+        <a class="button-link" href="$CHARACTER_ID/newjob">New Job</a>
+    </div>
+        
+    <div class='info-box'><h2>EVENTS</h2> <br>
         $EVENT_LIST</div>
     
   </div>
