--- a/createCharacter.html
+++ b/createCharacter.html
@@ -13,8 +13,11 @@
       <div class='info-box'><h2>STATISTICS</h2><textarea class="hidden-input" name="stats">$CHARACTER_STATS</textarea></div>
       <div class='info-box'></h2><h2>ABOUT</h2><textarea class="hidden-input" name="bio">$CHARACTER_BIO</textarea>
     </div>
+    <div class='info-box'><h2>JOBS</h2> <br>
+        $JOB_LIST</div>
       <div class='info-box'><h2>EVENTS</h2> <br>
         $EVENT_LIST</div>
+        
     
       </div>
       <button type="submit">Done</button>
