--- a/index.html
+++ b/index.html
@@ -1,36 +1,17 @@
 <!DOCTYPE html>
-<style>
-table {
-  border: 1px solid;
-  border-collapse: collapse;
-
-  width:100%;
-}
-
-th, td {
-  padding:10px;
-  border-bottom: 1px solid;
-  border-left: 1px solid;
-}
-
-tr:nth-child(even){
-  background-color: #000000;
-  color:#ffffff;
-}
-
-
-</style>
+<header>
+    <link rel="stylesheet" href="/style.css">
+</header>
 <html lang="">
   <head>
     <meta charset="utf-8">
     <title>WorldAssistant</title>
   </head>
   <body>
-    <form>
-    <input name="name"></input>
-    <button type="submit"></button>
-
-    </form>
-    $TABLE$
+    <header><div class="location-title"><h1>WorldAssistant</h1>: A Simple Note System</div></header>
+    <hr>
+    <a class="button-link" href="/locations">Locations</a>
+    <br>
+    <a class="button-link" href="/events">Timeline</a>
   </body>
 </html>
