--- a/eventTemplate.html
+++ b/eventTemplate.html
@@ -10,7 +10,9 @@
     <hr>
     <div class="info-body">
       <div class='info-box'><h2>ABOUT</h2> <br>
-    $EVENT_BLURB</div>
+    $EVENT_BLURB<br>
+    <a class="button-link" href="/events">FULL TIMELINE</a></div>
+    
     <div class='info-box'><h2>PARTIPANTS</h2> <br>
       $CHARACTER_LIST
       </div>
