--- a/timelineTemplate.html
+++ b/timelineTemplate.html
@@ -6,5 +6,6 @@
 <body>
     <div class="timeline-header">THE COMPLETE TIMELINE</div>
     <table class="'timeline-table">$TIMELINE</table>
+    <a class="button-link" href="/locations">VIEW LOCATIONS</a>
 </body>
 </html>
