--- a/locationsMasterList.html
+++ b/locationsMasterList.html
@@ -11,6 +11,7 @@
     <div class="info-body">$LOCATION_TABLE
       <a class="button-link" href="/locations/new">New Master Location</a>
     </div>
+    <a class="button-link" href="/events">FULL TIMELINE</a>
     
     
     </div>
